--- a/.github/workflows/ziye.yml
+++ b/.github/workflows/ziye.yml
@@ -1,49 +1,76 @@
-##  ziye 
-## github地址 https://github.com/6Svip120apk69
-## TG频道地址  https://t.me/ziyescript
-## TG交流群   https://t.me/joinchat/AAAAAE7XHm-q1-7Np-tF3g
-## boxjs链接  https://raw.githubusercontent.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE/main/Task/ziye.boxjs.json
-
-
-## 新建一个库，此文件路径为 .github/workflows/ziye-sync.yml 打开教程链接 https://www.jianshu.com/p/bb82b3ad1d11 ，申请PAT（勾选时尽量全部勾选 ），找到Settings------secrets------New repository secret------name填写PAT    value填写PAT的值        
-
-## 点击 Actions  手动运行或者等待定时运行即可自动生成分支 ZIYE 且自动同步文件至此
-
-## 其他作者库同理  替换如下    
- 
-## 作者名         6Svip120apk69  
-## 作者库名       gitee_q8qsTAUA_cThxc1RBVUE     
-## 作者分支名     main     
-## 同步分支名     ZIYE   （可自定义 ）
+# ziye
+# github地址  https://github.com/6Svip120apk69
+# TG频道地址  https://t.me/ziyescript
+# TG交流群    https://t.me/joinchat/AAAAAE7XHm-q1-7Np-tF3g
+# boxjs链接   https://raw.githubusercontent.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE/main/Task/ziye.boxjs.json
 
 
 
+# ⚠️⚠️⚠️特别重要,务必进行替换操作，不得使用原作者地址
 
-name: ziye-sync
+# 具体方法请看: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+
+
+
+#  以账号    aaa
+#  仓库地址  https://github.com/aaa/bbb 
+#  文件地址   https://raw.githubusercontent.com/aaa/bbb/ZIYE/Task/xiaole.js    为例 
+
+
+# 主要替换的字符👇
+
+# 小乐     //js名字
+# 0 0-15   //定时，如北京时间8到23点，设置0-15
+# XL_URL   //环境变量之一，47行处自行添加其他
+# aaa      //账号名
+# bbb      //仓库名
+# ZIYE     //分支名
+# Task/xiaole.js  //子文件地址
+
+
+
+
+name: 小乐
+
 on:
-  schedule:
-    - cron: '1 */3 * * *'
   workflow_dispatch:
+  schedule:
+     - cron: '0 0-15 * * *'
   watch:
     types: started
-  repository_dispatch:
-    types: sync-6Svip120apk69-gitee_q8qsTAUA_cThxc1RBVUE
 jobs:
-  repo-sync:
-    env:
-      PAT: ${{ secrets.PAT }} 
+  build:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
+    env:
+        XL_URL: ${{ secrets.XL_URL }}
+        XL_HEADER: ${{ secrets.XL_HEADER }}		
+        
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        run: |
+          git clone https://github.com/q470393267/oOPiece.git ~/bbb
+      - name: Use Node.js 12.x
+        uses: actions/setup-node@v1
         with:
-          persist-credentials: false
-
-      - name: sync 6Svip120apk69-gitee_q8qsTAUA_cThxc1RBVUE
-        uses: repo-sync/github-sync@v2
-        if: env.PAT
-        with:
-          source_repo: "https://github.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE.git"
-          source_branch: "main"
-          destination_branch: "ZIYE"
-          github_token: ${{ secrets.PAT }}
+          node-version: 12.x
+      - name: npm install
+        if: env.XL_URL
+        run: |
+          cd ~/bbb
+          git checkout ZIYE
+          npm install
+      - name: '运行 【小乐】'
+        if: env.XL_URL
+        run: |
+          cd ~/bbb
+          node Task/xiaole.js
+        env:
+          
+          PUSH_KEY: ${{ secrets.PUSH_KEY }}
+          BARK_PUSH: ${{ secrets.BARK_PUSH }}
+          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+          TG_USER_ID: ${{ secrets.TG_USER_ID }}
+          BARK_SOUND: ${{ secrets.BARK_SOUND }}
+          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
+          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
