--- a/.github/workflows/ziye.yml
+++ b/.github/workflows/ziye.yml
@@ -63,7 +63,7 @@ jobs:
       - name: '运行 【小乐】'
         if: env.XL_URL
         run: |
-          cd ~/bbb
+          cd ~/oOPiece
           node Task/xiaole.js
         env:
           
